--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,30 +1,77 @@
 {
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.productIconTheme": "material-product-icons",
-    "workbench.statusBar.visible": false,
-    "window.menuBarVisibility": "toggle",
-    "editor.fontFamily": "\"FIra Code\"",
-    "workbench.colorTheme": "Atom One Dark",
-    "workbench.editor.enablePreview": false,
-    "explorer.confirmDragAndDrop": false,
-    "explorer.confirmDelete": false,
-    "editor.fontLigatures": true,
-    "editor.minimap.enabled": false,
-    "workbench.activityBar.visible": false,
-    "workbench.sideBar.location": "left",
-    "breadcrumbs.enabled": false,
-    "editor.renderLineHighlight": "all",
-    "editor.cursorBlinking": "phase",
-    "editor.cursorSmoothCaretAnimation": "on",
-    "editor.glyphMargin": false,
-    "editor.lineNumbers": "on",
-    "editor.showFoldingControls": "never",
-    "window.title": " ",
-    "errorLens.fontWeight": "100",
-    "errorLens.gutterIconSet": "borderless",
-    "editor.hideCursorInOverviewRuler": true,
-    "editor.overviewRulerBorder": false,
-    "editor.scrollbar.horizontal": "hidden",
-    "editor.scrollbar.vertical": "hidden",
-    "workbench.layoutControl.enabled": false,
+  // Hide the activity bar
+  "workbench.activityBar.visible": false,
+  // Hide the status bar
+  "workbench.statusBar.visible": false,
+  // Hide the minimap
+  "editor.minimap.enabled": false,
+  // Hide the scrollbars
+  "editor.hideCursorInOverviewRuler": true,
+  "editor.overviewRulerBorder": false,
+  "editor.scrollbar.horizontal": "hidden",
+  "editor.scrollbar.vertical": "hidden",
+  "color-highlight.markRuler": false,
+  // Hide bradcrumbs
+  "breadcrumbs.enabled": false,
+  // Hide identation guides
+  "workbench.tree.renderIndentGuides": "none",
+  "editor.guides.indentation": false,
+  // Hide open editors
+  "explorer.openEditors.visible": 0,
+  // Hide decoration colors
+  "explorer.decorations.colors": false,
+  // turn off brackets guides
+  "editor.guides.highlightActiveBracketPair": false,
+  "editor.guides.bracketPairsHorizontal": false,
+  // Smooth cursors
+  "editor.cursorBlinking": "phase",
+  "editor.cursorSmoothCaretAnimation": "on",
+  // Line highlight
+  "editor.renderLineHighlight": "none",
+  // Editor left side
+  "editor.glyphMargin": false,
+  "editor.lineNumbers": "on",
+  "editor.showFoldingControls": "never",
+  // Title bar
+  "window.menuBarVisibility": "toggle",
+  "workbench.layoutControl.enabled": false,
+  "window.title": " ",
+  "window.commandCenter": false,
+  "security.workspace.trust.untrustedFiles": "open",
+  "workbench.editor.enablePreview": false,
+  "workbench.productIconTheme": "material-product-icons",
+  "workbench.colorTheme": "Andromeda Italic",
+  "workbench.iconTheme": "material-icon-theme",
+  "editor.fontFamily": "Hack Nerd Font",
+  "editor.rulers": [
+    125, 
+  ],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": true
+    },
+  },
+  "isort.args": [
+    "--profile",
+    "black"
+  ],
+  "errorLens.fontStyleItalic": true,
+  "errorLens.onSave": true,
+  "errorLens.statusBarMessageTemplate": "$source $message",
+  "errorLens.decorations": {
+
+    "errorRange": {},
+    "warningRange": {},
+    "infoRange": {},
+    "hintRange": {}
+  },
+  "errorLens.messageBackgroundMode": "none",
+  "errorLens.messageTemplate": "$source ($severity) - $message",
+  "explorer.confirmDragAndDrop": false,
+  "explorer.confirmDelete": false,
+  "editor.defaultFormatter": "charliermarsh.ruff",
+  "ruff.lint.run": "onSave",
+  "mypy-type-checker.importStrategy": "fromEnvironment",
 }
